# cs229-confusion-gan

./: .gitignore  ANALYSIS.md  README.md  analyze.testing.output.py  pyproject.toml  test.py  test_confusion_gan.py  test_confusion_gan_1024.py  train.py
data/: base_dataset.py  single_dataset.py  unaligned_dataset.py
data/.ipynb_checkpoints/: unaligned_dataset-checkpoint.py
models/: base_model.py  confusion_gan_model.py  networks.py
models/.ipynb_checkpoints/: IHC_Classifier-checkpoint.py  confusion_gan_model-checkpoint.py  confusion_gan_model_updated-checkpoint.py
options/: base_options.py  train_options.py
options/.ipynb_checkpoints/: base_options-checkpoint.py
util/: log_setup.py  util.py  visualizer.py
wandb/: latest-run
wandb/run-20260222_044424-d0c2cszm/: run-d0c2cszm.wandb
wandb/run-20260222_044424-d0c2cszm/files/: config.yaml  wandb-metadata.json
wandb/run-20260222_050515-t2s6qib5/: run-t2s6qib5.wandb
wandb/run-20260222_050515-t2s6qib5/files/: config.yaml  wandb-metadata.json
wandb/run-20260222_052829-8xrejyl5/: run-8xrejyl5.wandb
wandb/run-20260222_052829-8xrejyl5/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260222_055635-zjhel9e6/: run-zjhel9e6.wandb
wandb/run-20260222_055635-zjhel9e6/files/: wandb-metadata.json
